# exectos

./: .build.yml  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  ExectOS.code-workspace  IDEAS.md  KNOWN_ISSUES.md  README.md  configure.ps1  configure.sh
.github/: CODEOWNERS  (+2 more)
boot/xtldr/: CMakeLists.txt  biosutil.cc  config.cc  console.cc  data.cc  memory.cc  protocol.cc  shell.cc  textui.cc  xtldr.cc
boot/xtldr/arch/amd64/: memory.cc
boot/xtldr/arch/i686/: memory.cc
boot/xtldr/includes/: libxtos.hh  xtldr.hh
boot/xtldr/modules/beep/: CMakeLists.txt  beep.cc
boot/xtldr/modules/chainldr/: CMakeLists.txt  chainldr.cc
boot/xtldr/modules/dummy/: CMakeLists.txt
drivers/ntosdrv/: CMakeLists.txt  ntosdrv.c  ntosdrv.cc  ntosdrv.spec  rtl.c  rtl.cc
sdk/xtklib/: CMakeLists.txt
sdk/xtklib/hl/: cport.c
sdk/xtklib/includes/: libhl.h  librtl.h  xtklib.h
sdk/xtklib/rtl/: memory.c  plist.c  widestr.c
xtldr/: CMakeLists.txt  README.md  blproto.c  bootutil.c  bootutil.cc  config.c  config.cc  console.c  console.cc  data.cc  debug.c  debug.cc  efiutil.c  efiutils.c  efiutils.cc  globals.c  globals.cc  hardware.c  hardware.cc  memory.c  memory.cc  protocol.c  protocol.cc  shell.c  shell.cc  string.c  system.c  textui.c  textui.cc  volume.c  volume.cc  xtldr.c  xtldr.cc
xtldr/amd64/: memory.c
xtldr/arch/amd64/: memory.c  memory.cc
xtldr/arch/i686/: memory.c  memory.cc
xtldr/i686/: memory.c
xtldr/includes/: bldefs.h  blmod.h  blproto.h  globals.h  globals.hh  libxtos.hh  xtbl.h  xtldr.h  xtldr.hh
xtldr/modules/: CMakeLists.txt  blproto.c
xtldr/modules/acpi/: CMakeLists.txt  acpi.c  acpi.cc  data.cc  globals.c
xtldr/modules/beep/: CMakeLists.txt  beep.c  beep.cc  data.cc  globals.c
xtldr/modules/chainldr/: CMakeLists.txt  chainldr.c  chainldr.cc  data.cc  globals.c
xtldr/modules/dummy/: CMakeLists.txt  data.cc  dummy.c  dummy.cc  globals.c
xtldr/modules/fb_o/: CMakeLists.txt  framebuf.c  gop.c
xtldr/modules/framebuf/: CMakeLists.txt  framebuf.c  framebuf.cc  globals.c  gop.c
xtldr/modules/pecoff/: CMakeLists.txt  globals.c  pecoff.c  pecoff.cc
xtldr/modules/pecoff_o/: CMakeLists.txt  pecoff.c
xtldr/modules/xtos/: CMakeLists.txt  xtos.c
xtldr/modules/xtos_o/: CMakeLists.txt  memory.c  xtos.c  xtos.cc
xtoskrnl/: CMakeLists.txt  README.md  xtoskrnl.spec
xtoskrnl/ar/amd64/: archsup.S  boot.S  cpufunc.c  cpufunc.cc  data.cc  globals.c  procsup.c  procsup.cc  traps.c  traps.cc
xtoskrnl/ar/i686/: archsup.S  boot.S  cpufunc.c  cpufunc.cc  data.cc  globals.c  procsup.c  procsup.cc  traps.c  traps.cc
xtoskrnl/ex/: exports.cc  rundown.c  rundown.cc
xtoskrnl/hl/: acpi.c  acpi.cc  apic.c  cport.c  cport.cc  cpu.c  data.cc  efifb.c  exports.cc  fbdev.c  fbdev.cc  globals.c  init.c  init.cc  ioreg.cc  pic.c
xtoskrnl/hl/amd64/: cpu.c  cpu.cc  cpufunc.c  firmware.cc  ioport.c  ioport.cc  irq.cc  pic.c  pic.cc  rtc.cc  runlevel.c  runlevel.cc  timer.cc
xtoskrnl/hl/i686/: cpu.c  cpu.cc  cpufunc.c  firmware.cc  ioport.c  ioport.cc  irq.cc  pic.c  pic.cc  rtc.cc  runlevel.c  runlevel.cc  timer.cc
xtoskrnl/hl/x86/: cpu.c  cpu.cc  firmware.cc  pic.c  pic.cc  rtc.cc  timer.cc
xtoskrnl/includes/: ar.h  ar.hh  arpfuncs.h  dbg.hh  ex.hh  globals.h  hl.h  hl.hh  hli.h  kd.hh  kdi.h  ke.h  ke.hh  kei.h  kepfuncs.h  mm.h  mm.hh  mmi.h  po.h  po.hh  poi.h  popfuncs.h  rtl.h  rtl.hh  rtli.h  xtos.h  xtos.hh
xtoskrnl/includes/amd64/: ar.h  ari.h  arpfuncs.h  asmsup.h  globals.h  hl.h  hli.h  ke.h  kei.h  kepfuncs.h  mm.h  mmi.h  rtl.h  rtli.h
xtoskrnl/includes/ex/: rundown.hh
xtoskrnl/includes/hl/: acpi.hh  cport.hh  cpu.hh  fbdev.hh  firmware.hh  init.hh  ioport.hh  ioreg.hh  irq.hh  pic.hh  rtc.hh  runlevel.hh  timer.hh
xtoskrnl/includes/i686/: ar.h  ari.h  arpfuncs.h  globals.h  hl.h  hli.h  ke.h  kei.h  kepfuncs.h  mm.h  mmi.h  rtl.h  rtli.h
xtoskrnl/includes/kd/: dbg.hh  dbgio.hh
xtoskrnl/includes/ke/: apc.hh  bootinfo.hh  crash.hh  dispatch.hh  dpc.hh  event.hh  guard.hh  info.hh  irq.hh  kprocess.hh  krnlinit.hh  kthread.hh  kubsan.hh  proc.hh  runlevel.hh  semphore.hh  shdata.hh  spinlock.hh  sysres.hh  systime.hh  timer.hh
xtoskrnl/includes/mm/: alloc.hh  colors.hh  guard.hh  hlpool.hh  init.hh  kpool.hh  mmgr.hh  paging.hh  pfault.hh  pfn.hh  pool.hh  pte.hh
xtoskrnl/includes/po/: idle.hh
xtoskrnl/includes/rtl/: atomic.hh  bitmap.hh  dispatch.hh  endian.hh  guid.hh  llist.hh  math.hh  memory.hh  sha1.hh  slist.hh  string.hh  time.hh  widestr.hh
xtoskrnl/kd/: data.cc  dbginit.c  dbgio.c  dbgio.cc  exports.cc  globals.c
xtoskrnl/ke/: apc.c  apc.cc  bootinfo.cc  crash.cc  data.cc  dispatch.cc  dpc.c  dpc.cc  event.c  event.cc  exports.cc  globals.c  info.c  kprocess.c  kprocess.cc  krnlinit.c  krnlinit.cc  kthread.c  kthread.cc  kubsan.c  kubsan.cc  panic.c  runlevel.c  runlevel.cc  semphore.c  semphore.cc  shdata.cc  spinlock.c  spinlock.cc  sysres.c  sysres.cc  systime.cc  timer.c  timer.cc
xtoskrnl/ke/amd64/: dispatch.cc  irq.cc  irqs.c  krnlinit.c  krnlinit.cc  kthread.c  kthread.cc  proc.c  proc.cc
xtoskrnl/ke/i686/: dispatch.cc  irq.cc  irqs.c  krnlinit.c  krnlinit.cc  kthread.c  kthread.cc  proc.c  proc.cc
xtoskrnl/mm/: alloc.cc  colors.cc  data.cc  exports.cc  globals.c  hlpool.c  hlpool.cc  init.c  init.cc  kpool.cc  kpools.c  mmgr.cc  pages.c  paging.cc  pfn.cc  pool.cc  pte.cc
xtoskrnl/mm/amd64/: alloc.cc  globals.c  init.c  init.cc  mmgr.cc  pagemap.cc  pages.c  paging.cc  pfault.cc  pfn.cc  pmap.c  pool.cc  pte.cc
xtoskrnl/mm/i686/: alloc.cc  globals.c  init.c  init.cc  mmgr.cc  pagemap.cc  pages.c  paging.cc  pfault.cc  pfn.cc  pmap.c  pool.cc  pte.cc
xtoskrnl/po/: idle.c  idle.cc
xtoskrnl/rtl/: atomic.c  atomic.cc  bitmap.c  bitmap.cc  byteswap.c  data.cc  endian.cc  exports.cc  globals.c  guid.c  guid.cc  intrin.c  ioreg.c  llist.cc  math.c  math.cc  memory.c  memory.cc  plist.c  sha1.cc  slist.cc  string.c  string.cc  time.cc  widestr.c  widestr.cc
xtoskrnl/rtl/amd64/: dispatch.c  dispatch.cc  exsup.c  exsup.cc  intrin.cc
xtoskrnl/rtl/i686/: dispatch.c  dispatch.cc  exsup.c  exsup.cc  intrin.cc
(+159 files in other folders)
